--- a/data/rush/17483.yaml
+++ b/data/rush/17483.yaml
@@ -40,6 +40,8 @@ images:
   illustration: TransamuRainac-G002-JP-VG-artwork.png
 - index: 2
   image: TransamuRainac-RD711B-JP-NPR.png
+- index: 3
+  image: TransamuRainac-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/S221-JP001
@@ -62,6 +64,10 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
+  - set_number: RD/ECG1-JP016
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP09-KRS01
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
