--- a/data/rush/17946.yaml
+++ b/data/rush/17946.yaml
@@ -51,12 +51,19 @@ series:
 images:
 - index: 1
   image: RedBootBoostDragon-RDSD03-JP-C.png
+  illustration: RedBootBoostDragon-G002-JP-VG-artwork.png
+- index: 2
+  image: RedBootBoostDragon-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/SD03-JP001
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/ECG1-JP018
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/SD03-KR001
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
