--- a/data/rush/17990.yaml
+++ b/data/rush/17990.yaml
@@ -51,10 +51,17 @@ series:
 images:
 - index: 1
   image: VoidvelgrTransi-RDSJMP-JP-NPR.png
+  illustration: VoidvelgrTransi-G002-JP-VG-artwork.png
+- index: 2
+  image: VoidvelgrTransi-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP018
     set_name: Saikyō Jump September 2022 promotional card
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/ECG1-JP020
+    set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
   ko:
