--- a/data/rush/yugipedia992240.yaml
+++ b/data/rush/yugipedia992240.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    None
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Toss a coin. If the result is heads, destroy all monsters on your opponent's field. If the result is tails, destroy all monsters on your field, and you take damage equal to [the total original ATK of the monsters destroyed by this effect].
   de:
   es:
   fr:
@@ -42,14 +42,16 @@ attribute: LIGHT
 level: 2
 atk: 500
 def: 400
+legend: true
 images:
 - index: 1
-  image: TimeWizard-OW-2.png
+  image: TimeWizard-RDECG1-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP0??
-    set_name: Yu-Gi-Oh! Rush Duel Card Game Gum
+  - set_number: RD/ECG1-JP002
+    set_name: Rush Duel Card Game Gum
     rarities:
+    - Normal Parallel Rare
 is_translation_unofficial:
   text:
     en: true
