--- a/data/cards/07902349.yaml
+++ b/data/cards/07902349.yaml
@@ -307,6 +307,10 @@ sets:
     set_name: World Premiere Pack 2022
     rarities:
     - Prismatic Secret Rare
+  - set_number: ''
+    set_name: Terminal World (set)
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LOB-K123
     set_name: Legend of Blue Eyes White Dragon
