--- a/data/cards/40456412.yaml
+++ b/data/cards/40456412.yaml
@@ -37,6 +37,26 @@ images:
 - index: 1
   image: MiracleoftheSupremeKing-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN068
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE068
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR068
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT068
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT068
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP068
     set_name: Age of Overlord
@@ -50,9 +70,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 936304
