--- a/data/cards/55795155.yaml
+++ b/data/cards/55795155.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can shuffle 1 Pendulum Monster from your hand into the Deck; add 1 Pendulum Monster with 2500 ATK and a different name from your Deck to your hand. During your Main Phase, if you Special Summoned a face-down Pendulum Monster(s) from your Extra Deck this turn, you can: Immediately after this effect resolves, Pendulum Summon a monster(s). You can target 1 "Supreme King Z-ARC" you control; it can attack all your opponent's monsters once each this turn. You can only use each effect of "Pendulum Evolution" once per turn.
+    You can shuffle 1 Pendulum Monster from your hand into the Deck; add 1 Pendulum Monster with 2500 ATK and a different name, from your Deck to your hand. During your Main Phase, if you Special Summoned a Pendulum Monster from the face-down Extra Deck this turn, you can: Immediately after this effect resolves, Pendulum Summon a monster(s). You can target 1 "Supreme King Z-ARC" you control; this turn, it can attack all monsters your opponent controls, once each. You can only use each effect of "Pendulum Evolution" once per turn.
   de:
   es:
   fr:
@@ -34,6 +34,26 @@ images:
 - index: 1
   image: PendulumEvolution-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN047
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE047
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR047
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT047
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT047
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP047
     set_name: Age of Overlord
@@ -47,9 +67,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 936295
