--- a/data/cards/81978611.yaml
+++ b/data/cards/81978611.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Add 1 "Armored Xyz" card from your Deck or GY to your hand, then you can make the Levels of up to 2 face-up monsters you control become 3 or 5 until the end of this turn. If this card is in your GY, except the turn it was sent there: You can banish this card, then target 1 Xyz Monster Card treated as an Equip Card in your Spell & Trap Zone; Special Summon it. You can only activate 1 "Xyz Entrust" per turn.
+    Add 1 "Armored Xyz" card from your Deck or GY to your hand, then you can make up to 2 face-up monsters you control become all Level 3 or all Level 5, until the end of this turn. During your Main Phase, except the turn this card was sent to the GY: You can banish this card from your GY, then target 1 Xyz Monster Card treated as an Equip Card in your Spell & Trap Zone; Special Summon it. You can only activate 1 "Xyz Entrust" per turn.
   de:
   es:
   fr:
@@ -34,6 +34,26 @@ images:
 - index: 1
   image: XyzEntrust-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN051
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE051
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR051
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT051
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT051
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP051
     set_name: Age of Overlord
@@ -47,9 +67,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992989
