--- a/data/cards/82190203.yaml
+++ b/data/cards/82190203.yaml
@@ -1,7 +1,7 @@
 konami_id: 19190
 password: 82190203
 name:
-  en: The Light-Winged Dragon
+  en: Wings of Light
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase: Add 1 "Supreme King Dragon" or "Supreme King Gate" Pendulum Monster from your Deck to your hand, or, if you control "Supreme King Z-ARC", you can Special Summon it instead. You can only activate 1 "The Light-Winged Dragon" per turn.
+    During the Main Phase: Add 1 "Supreme King Dragon" or "Supreme King Gate" Pendulum Monster from your Deck to your hand, or if you control "Supreme King Z-ARC", you can Special Summon it instead. You can only activate 1 "Wings of Light" per turn.
   de:
   es:
   fr:
@@ -30,8 +30,28 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: TheLightWingedDragon-AGOV-JP-R.png
+  image: WingsofLight-AGOV-JP-R.png
 sets:
+  en:
+  - set_number: AGOV-EN048
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE048
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR048
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT048
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT048
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP048
     set_name: Age of Overlord
@@ -45,9 +65,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 936300
