--- a/data/rush/yugipedia992240.yaml
+++ b/data/rush/yugipedia992240.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    コイントスを１回行う。表だった場合、相手フィールドのモンスターを全て破壊する。裏だった場合、自分フィールドのモンスターを全て破壊し、自分は［この効果で破壊したモンスターの元々の攻撃力の合計］だけダメージを受ける。
   ko:
   zh-TW:
   zh-CN:
