--- a/data/cards/06218704.yaml
+++ b/data/cards/06218704.yaml
@@ -1,7 +1,7 @@
 konami_id: 19172
 password: 6218704
 name:
-  en: Supreme Celestial King Odd-Eyes Arc-Ray Dragon
+  en: Odd-Eyes Arcray Dragon
   de:
   es:
   fr:
@@ -38,7 +38,9 @@ def: 4000
 pendulum_scale: 13
 pendulum_effect:
   en: |-
-    If you have 2 cards in your Pendulum Zone: You can Special Summon this card, then you can shuffle 1 card from your Pendulum Zone into the Deck, then, if it returned to your Extra Deck, you can Special Summon it, ignoring its Summoning conditions. You can only use this effect of "Supreme Celestial King Odd-Eyes Arc-Ray Dragon" once per turn.
+    If you have 2 cards in your Pendulum Zones: You can Special Summon this card, then you can apply this effect.
+    ● Shuffle 1 card from your Pendulum Zone into the Deck, then if it was added to your Extra Deck, you can Special Summon it, ignoring its Summoning conditions.
+    You can only use this effect of "Odd-Eyes Arcray Dragon" once per turn.
   de:
   es:
   fr:
@@ -55,8 +57,33 @@ series:
 - -Eyes Dragon
 images:
 - index: 1
-  image: SupremeCelestialKingOddEyesArcRayDragon-AGOV-JP-UR.png
+  image: OddEyesArcrayDragon-AGOV-JP-UR.png
 sets:
+  en:
+  - set_number: AGOV-EN030
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE030
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR030
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT030
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT030
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP030
     set_name: Age of Overlord
@@ -87,9 +114,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 936292
