--- a/data/cards/10113611.yaml
+++ b/data/cards/10113611.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card can attack directly. You can only use each of the following effects of "Wattuna" once per turn. If your monster inflicts battle damage to your opponent, at the end of the Damage Step: You can Special Summon this card from your hand. When this card inflicts battle damage to your opponent by a direct attack: You can Tribute this card and 1 or more non-Tuners from your hand and/or face-up field, and if you do, Special Summon 1 "Watt" Synchro Monster from your Extra Deck whose Level equals the total Levels of the Tributed monsters.
+    This card can attack directly. You can only use each of the following effects of "Wattuna" once per turn. At the end of the Damage Step, if your monster inflicts battle damage to your opponent: You can Special Summon this card from your hand. When this card inflicts battle damage to your opponent by a direct attack: You can Tribute this card on the field and 1 or more non-Tuner monsters from your hand and/or face-up field, and Special Summon 1 "Watt" Synchro Monster from your Extra Deck whose Level equals the total Levels of those Tributed monsters.
   de:
   es:
   fr:
@@ -38,6 +38,26 @@ images:
 - index: 1
   image: Wattuna-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN015
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE015
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR015
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT015
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT015
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP015
     set_name: Age of Overlord
@@ -51,9 +71,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 986052
