--- a/data/cards/14391625.yaml
+++ b/data/cards/14391625.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card's name becomes "Visas Starfrost" while on the field or in the GY. You can target any number of your "Visas" monsters that are banished, on your field, and/or in your GY; shuffle those "Visas" monsters into the Deck, and if you do, Special Summon this card from your hand, and if you do that, it gains 400 ATK for each monster with different names shuffled by this effect. You can only use this effect of "Visas Samsara" once per turn. If this card you control would be used as Synchro Material, you can treat it as a non-Tuner.
+    This card's name becomes "Visas Starfrost" while on the field or in the GY. You can target any number of your "Visas" monsters that are banished, in your GY, and/or on your field; shuffle those "Visas" monsters into the Deck, and if you do, Special Summon this card from your hand, and if you do that, it gains 400 ATK for each monster you shuffled with a different original name. You can only use this effect of "Visas Samsara" once per turn. If this card you control would be used as Synchro Material, you can treat it as a non-Tuner.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: VisasSamsara-AGOV-JP-R.png
 sets:
+  en:
+  - set_number: AGOV-EN004
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE004
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR004
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT004
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT004
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP004
     set_name: Age of Overlord
@@ -51,9 +76,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 978644
