--- a/data/cards/21368273.yaml
+++ b/data/cards/21368273.yaml
@@ -1,7 +1,7 @@
 konami_id: 19179
 password: 21368273
 name:
-  en: Mannadium Trilosukda
+  en: Mannadium Trisukta
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    If this card is Synchro Summoned: You can target 1 Level 2 Tuner in your GY; Special Summon it, but its effects are negated. You can target any number of Tuners you control; their Levels become 2, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. You can only use each effect of "Mannadium Trilosukda" once per turn.
+    If this card is Synchro Summoned: You can target 1 Level 2 Tuner in your GY; Special Summon it, but negate its effects. You can target any number of Tuners you control; change their Levels to 2, also you cannot Special Summon from the Extra Deck for the rest of this turn, except Synchro Monsters. You can only use each effect of "Mannadium Trisukta" once per turn.
   de:
   es:
   fr:
@@ -39,8 +39,33 @@ series:
 - Mannadium
 images:
 - index: 1
-  image: MannadiumTrilosukda-AGOV-JP-SR.png
+  image: MannadiumTrisukta-AGOV-JP-SR.png
 sets:
+  en:
+  - set_number: AGOV-EN037
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE037
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR037
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT037
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT037
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP037
     set_name: Age of Overlord
@@ -69,8 +94,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 978645
