--- a/data/cards/29301450.yaml
+++ b/data/cards/29301450.yaml
@@ -1,7 +1,7 @@
 konami_id: 19188
 password: 29301450
 name:
-  en: S:P Little Night
+  en: S:P Little Knight
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Effect Monsters
-    If this card is Link Summoned using a Fusion, Synchro, Xyz, and/or Link Monster as material: You can target 1 card on the field or in the GY; banish it, also your monsters cannot attack directly for the rest of this turn. When your opponent activates a card or effect (Quick Effect): You can target 2 face-up monsters on the field, including at least 1 monster you control; banish both monsters until the End Phase. You can only use each effect of "S:P Little Night" once per turn.
+    If this card is Link Summoned using a Fusion, Synchro, Xyz, or Link Monster as material: You can target 1 card on the field or in either GY; banish it, also your monsters cannot attack directly this turn. When your opponent activates a card or effect (Quick Effect): You can target 2 face-up monsters on the field, including a monster you control; banish both until the End Phase. You can only use each effect of "S:P Little Knight" once per turn.
   de:
   es:
   fr:
@@ -38,8 +38,33 @@ atk: 1600
 materials: 2 Effect Monsters
 images:
 - index: 1
-  image: SPLittleNight-AGOV-JP-SR.png
+  image: SPLittleKnight-AGOV-JP-SR.png
 sets:
+  en:
+  - set_number: AGOV-EN046
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE046
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR046
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT046
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT046
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP046
     set_name: Age of Overlord
@@ -67,9 +92,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 993390
