--- a/data/cards/41908872.yaml
+++ b/data/cards/41908872.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 face-up "Supreme King Dragon" or "Supreme King Gate" Pendulum Monster from your Extra Deck to your hand, then, immediately after this effect resolves, you can Synchro or Xyz Summon 1 "Supreme King Dragon" monster. If a face-up Pendulum Monster(s) you control is destroyed by battle or card effect while this card is face-up in your Extra Deck: You can add this card to your hand. You can only use each monster effect of "Supreme King Dragon Lightwurm" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 face-up "Supreme King Dragon" or "Supreme King Gate" Pendulum Monster from your Extra Deck to your hand, then, immediately after this effect resolves, you can Synchro or Xyz Summon 1 "Supreme King Dragon" monster. If a face-up Pendulum Monster(s) you control is destroyed by battle or card effect, while this card is face-up in your Extra Deck: You can add this card to your hand. You can only use each effect of "Supreme King Dragon Lightwurm" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ def: 1800
 pendulum_scale: 8
 pendulum_effect:
   en: |-
-    If a monster(s) is Special Summoned, and you control "Supreme King Z-ARC" and another Pendulum Monster (except during the Damage Step): You can Special Summon this card, then you can choose 1 other Pendulum Monster you control, and the Attribute and Level of that monster or this card become the Attribute and Level of the other. You can only use this effect of "Supreme King Dragon Lightwurm" once per turn.
+    If a monster(s) is Special Summoned and you control "Supreme King Z-ARC" and another Pendulum Monster (except during the Damage Step): You can Special Summon this card, then you can make the Level and Attribute of either this card or 1 Pendulum Monster you control become the same Level and Attribute as the other. You can only use this effect of "Supreme King Dragon Lightwurm" once per turn.
   de:
   es:
   fr:
@@ -53,6 +53,26 @@ images:
 - index: 1
   image: SupremeKingDragonLightwurm-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN002
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE002
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR002
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT002
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT002
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP002
     set_name: Age of Overlord
@@ -66,9 +86,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 936288
