--- a/data/cards/67630394.yaml
+++ b/data/cards/67630394.yaml
@@ -1,7 +1,7 @@
 konami_id: 19183
 password: 67630394
 name:
-  en: Full Armored DARK Lancer
+  en: Full Armored Dark Knight Lancer
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 7 monsters
-    Once per turn, you can also Xyz Summon "Full Armored DARK Lancer" by using 1 Rank 5 or 6 Xyz Monster you control. (Transfer its materials to this card.) Gains 300 ATK for each material attached to it and each card equipped to it. Once per turn: You can target 1 "Xyz" card in your GY; add it to your hand. Once per turn, if an Equip Card(s) becomes equipped to a monster you control (except during the Damage Step): You can attach 1 monster your opponent controls to this card as material.
+    Once per turn, you can also Xyz Summon "Full Armored Dark Knight Lancer" by using 1 Rank 5 or 6 Xyz Monster you control. (Transfer its materials to this card.) Gains 300 ATK for each material and Equip Card it has. Once per turn: You can target 1 "Xyz" card in your GY; add it to your hand. Once per turn, if an Equip Card becomes equipped to a monster you control (except during the Damage Step): You can attach 1 monster your opponent controls to this card as material.
   de:
   es:
   fr:
@@ -37,8 +37,33 @@ def: 1500
 materials: 3 Level 7 monsters
 images:
 - index: 1
-  image: FullArmoredDARKLancer-AGOV-JP-UR.png
+  image: FullArmoredDarkKnightLancer-AGOV-JP-UR.png
 sets:
+  en:
+  - set_number: AGOV-EN041
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE041
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR041
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT041
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT041
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP041
     set_name: Age of Overlord
@@ -68,9 +93,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992985
