--- a/data/cards/67752972.yaml
+++ b/data/cards/67752972.yaml
@@ -1,14 +1,14 @@
 konami_id: 19180
 password: 67752972
 name:
-  en: Wattaurus
+  en: Wattkyuki
   de:
   es:
   fr:
   it:
   pt:
   ja: エレキュウキ
-  ja_romaji: Erekyūki
+  ja_romaji: Erekyuuki
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 "Watt" Tuner + 1+ non-Tuner Thunder monsters
-    This card can attack directly. When this card inflicts battle damage to your opponent by a direct attack: You can shuffle both 1 "Watt" Tuner from your GY and 1 face-up Thunder non-Tuner you control into the Deck, and if you do, Special Summon 1 "Watt" Synchro Monster from your Extra Deck, except "Wattaurus". You can only use this effect of "Wattaurus" once per turn.
+    This card can attack directly. When this card inflicts battle damage to your opponent by a direct attack: You can shuffle both 1 "Watt" Tuner from your GY and 1 face-up non-Tuner Thunder monster you control into the Deck, and if you do, Special Summon 1 "Watt" Synchro Monster from your Extra Deck, except "Wattkyuki". You can only use this effect of "Wattkyuki" once per turn.
   de:
   es:
   fr:
@@ -39,8 +39,28 @@ series:
 - Watt
 images:
 - index: 1
-  image: Wattaurus-AGOV-JP-R.png
+  image: Wattkyuki-AGOV-JP-R.png
 sets:
+  en:
+  - set_number: AGOV-EN038
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE038
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR038
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT038
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT038
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP038
     set_name: Age of Overlord
@@ -54,9 +74,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 986053
