--- a/data/cards/73602965.yaml
+++ b/data/cards/73602965.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can send this card from your hand or field to the GY; from your hand, either Special Summon 1 "Labrynth" monster, or Set 1 Normal Trap. That Set card can be activated this turn. When your opponent activates a card or effect in response to the activation of your "Labrynth" card or effect, except "Labrynth Butler Arias", or your Normal Trap Card or effect, while this card is in your GY (Quick Effect): You can Special Summon this card. You can only use each effect of "Labrynth Butler Arias" once per turn.
+    During the Main Phase (Quick Effect): You can send this card from your hand or field to the GY; Special Summon 1 "Labrynth" monster, or Set 1 Normal Trap, from your hand. The Set Normal Trap can be activated this turn. When your opponent activates a card or effect in response to your card or effect activation of a Normal Trap or a "Labrynth" card, except "Labrynth Butler Arias" (Quick Effect): You can activate this effect in the GY; Special Summon this card. You can only use each effect of "Labrynth Butler Arias" once per turn.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: AriastheLabrynthButler-AGOV-JP-SR.png
 sets:
+  en:
+  - set_number: AGOV-EN017
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE017
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR017
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT017
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT017
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP017
     set_name: Age of Overlord
@@ -65,9 +90,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 994288
