--- a/data/cards/93039339.yaml
+++ b/data/cards/93039339.yaml
@@ -1,7 +1,7 @@
 konami_id: 19184
 password: 93039339
 name:
-  en: Stellar Nemesis T-PHON - Doomsday Star
+  en: Super Starslayer TY-PHON - Sky Crisis
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 12 monsters
-    If your opponent Special Summoned 2 or more monsters from the Extra Deck this turn or the previous turn, you can also Xyz Summon this card by using the 1 monster you control with the highest ATK (your choice, if tied). (Transfer its materials to this card.) If Summoned this way, you cannot Normal or Special Summon monsters for the rest of this turn. While you control this Xyz Summoned card, neither player can activate the effects of monsters with 3000 or more ATK. Once per turn: You can detach 1 material from this card; return 1 monster on the field to the hand.
+    During the turn, or turn after, your opponent Special Summoned 2 or more monsters from the Extra Deck, you can also Xyz Summon this card by using 1 monster you control with the highest ATK (your choice, if tied). (Transfer its materials to this card.) If you do, you cannot Normal or Special Summon monsters for the rest of this turn. While this Xyz Summoned monster is on the field, neither player can activate the effects of monsters with 3000 or more ATK. Once per turn: You can detach 1 material from this card; return 1 monster from the field to the hand.
   de:
   es:
   fr:
@@ -37,8 +37,38 @@ def: 2900
 materials: 2 Level 12 monsters
 images:
 - index: 1
-  image: StellarNemesisTPHONDoomsdayStar-AGOV-JP-UR.png
+  image: SuperStarslayerTYPHONSkyCrisis-AGOV-JP-UR.png
 sets:
+  en:
+  - set_number: AGOV-EN042
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE042
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR042
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT042
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT042
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP042
     set_name: Age of Overlord
@@ -68,9 +98,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 994484
