--- a/data/rush/yugipedia1018999.yaml
+++ b/data/rush/yugipedia1018999.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（攻撃力１０００以下）がいない場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、このカードは直接攻撃できる。
   ko:
   zh-TW:
   zh-CN:
