--- a/data/rush/yugipedia1019007.yaml
+++ b/data/rush/yugipedia1019007.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    １０００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の手札を確認し、その中からカード１枚を選んで墓地へ送る。
   ko:
   zh-TW:
   zh-CN:
