--- a/rush.yaml
+++ b/rush.yaml
@@ -119790,7 +119790,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「時の魔術師」＋「ベビードラゴン」
   ko:
   zh-TW:
   zh-CN:
@@ -119845,7 +119846,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（攻撃力１０００以下）がいない場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119857,7 +119859,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、このカードは直接攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119903,7 +119906,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    普段は貝殼の中に身を隠し、近づく者に矢を放つマーメイド。
   ko:
   zh-TW:
   zh-CN:
@@ -119946,7 +119950,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    大きな右手が特徴のゴーレム。右手で押しつぶして攻撃する。
   ko:
   zh-TW:
   zh-CN:
@@ -119989,7 +119994,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    毒ヘビの頭を持つモンスター。目をあわせると、石にされてしまう。
   ko:
   zh-TW:
   zh-CN:
@@ -120032,7 +120038,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    １０００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -120044,7 +120051,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の手札を確認し、その中からカード１枚を選んで墓地へ送る。
   ko:
   zh-TW:
   zh-CN:
@@ -120086,7 +120094,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -120098,7 +120107,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    コイントスを１回行う。表だった場合、相手フィールドのモンスターを全て破壊する。裏だった場合、自分フィールドのモンスターを全て破壊し、自分は［この効果で破壊したモンスターの元々の攻撃力の合計］だけダメージを受ける。
   ko:
   zh-TW:
   zh-CN:
