--- a/data/rush/16146.yaml
+++ b/data/rush/16146.yaml
@@ -54,6 +54,8 @@ attribute: EARTH
 level: 3
 atk: 800
 def: 0
+series:
+- Constructor
 images:
 - index: 1
   image: WyrmExcavatortheHeavyCavalryDracoR-RDSBD7-JP-C.png
