--- a/data/rush/16144.yaml
+++ b/data/rush/16144.yaml
@@ -56,6 +56,8 @@ attribute: EARTH
 level: 3
 atk: 800
 def: 0
+series:
+- Constructor
 images:
 - index: 1
   image: WyrmExcavatortheHeavyCavalryDracoL-RDSBD7-JP-C.png
