--- a/data/rush/16359.yaml
+++ b/data/rush/16359.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle up to 5 monsters from your opponent's Graveyard into the Deck. Then, if your opponent has a face-up Spellcaster Type monster on their field, you can shuffle up to 5 additional monsters from your opponent's Graveyard into the Deck.
+    Shuffle up to 5 monsters from your opponent's Graveyard into the Deck. Then, if your opponent has a face-up Spellcaster Type monster on their field, you can shuffle up to 5 monsters from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
