--- a/data/rush/16958.yaml
+++ b/data/rush/16958.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if a face-up Field Spell Card is on the field, you can draw 1 additional card.
+    Draw 1 card. Then, if a face-up Field Spell Card is on the field, you can draw 1 card.
   de:
   es:
   fr:
