--- a/data/rush/17002.yaml
+++ b/data/rush/17002.yaml
@@ -63,6 +63,8 @@ materials:
     "마장 야메룰러" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
+series:
+- Three Rulers
 images:
 - index: 1
   image: YamiterasutheDivineRuler-RDS224-JP-ScR.png
