--- a/data/rush/17017.yaml
+++ b/data/rush/17017.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you sent a Level 7 monster to the Graveyard to meet the requirement, you can draw 1 additional card.
+    Draw 1 card. Then, if you sent a Level 7 monster to the Graveyard to meet the requirement, you can draw 1 card.
   de:
   es:
   fr:
