--- a/data/rush/17302.yaml
+++ b/data/rush/17302.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 1 card from your opponent's Graveyard into the Deck. Then, if you shuffled a Spell/Trap Card by this effect, you can shuffle 1 additional card from your opponent's Graveyard into the Deck.
+    Shuffle 1 card from your opponent's Graveyard into the Deck. Then, if you shuffled a Spell/Trap Card by this effect, you can shuffle 1 card from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
