--- a/data/rush/17669.yaml
+++ b/data/rush/17669.yaml
@@ -62,6 +62,8 @@ materials:
     "세븐즈로드 매지션" ＋ "다크니스 제로로그"
   zh-TW:
   zh-CN:
+series:
+- Darkness
 images:
 - index: 1
   image: MagicianofDarkSevens-RDMRP1-JP-UR.png
