--- a/data/rush/17902.yaml
+++ b/data/rush/17902.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if your opponent has a face-up Level 7 monster on their field, you can draw 1 additional card.
+    Draw 1 card. Then, if your opponent has a face-up Level 7 monster on their field, you can draw 1 card.
   de:
   es:
   fr:
