--- a/data/rush/18772.yaml
+++ b/data/rush/18772.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have no monsters in your Graveyard, draw 1 additional card.
+    Draw 1 card. Then, if you have no monsters in your Graveyard, draw 1 card.
   de:
   es:
   fr:
