--- a/data/rush/19325.yaml
+++ b/data/rush/19325.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have a monster in Maximum Mode or a face-up Equip Spell Card on your field, you can draw 1 additional card.
+    Draw 1 card. Then, if you have a monster in Maximum Mode or a face-up Equip Spell Card on your field, you can draw 1 card.
   de:
   es:
   fr:
