--- a/data/rush/yugipedia1018570.yaml
+++ b/data/rush/yugipedia1018570.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have 2 or more "Straynge Cat" and/or "Furtunate Cat" in your Graveyard, draw 1 additional card.
+    Draw 1 card. Then, if you have 2 or more "Straynge Cat" and/or "Furtunate Cat" in your Graveyard, draw 1 card.
   de:
   es:
   fr:
