--- a/rush.yaml
+++ b/rush.yaml
@@ -6188,6 +6188,8 @@ attribute: DARK
 level: 1
 atk: 800
 def: 500
+series:
+- Red-Eyes
 images:
 - index: 1
   image: BlackDragonsChick-RDGRP1-JP-C.png
@@ -20253,7 +20255,6 @@ atk: 500
 def: 200
 series:
 - Cat
-- Red-Eyes
 images:
 - index: 1
   image: RedEyesBlackCat-RDMAX1-JP-C.png
@@ -20309,7 +20310,6 @@ level: 1
 atk: 600
 def: 200
 series:
-- Blue-Eyes
 - Cat
 images:
 - index: 1
@@ -24135,6 +24135,8 @@ attribute: EARTH
 level: 3
 atk: 800
 def: 0
+series:
+- Constructor
 images:
 - index: 1
   image: WyrmExcavatortheHeavyCavalryDracoL-RDSBD7-JP-C.png
@@ -24236,6 +24238,8 @@ attribute: EARTH
 level: 10
 atk: 2500
 def: 0
+series:
+- Constructor
 maximum_atk: 3500
 images:
 - index: 1
@@ -24317,6 +24321,8 @@ attribute: EARTH
 level: 3
 atk: 800
 def: 0
+series:
+- Constructor
 images:
 - index: 1
   image: WyrmExcavatortheHeavyCavalryDracoR-RDSBD7-JP-C.png
@@ -31859,7 +31865,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle up to 5 monsters from your opponent's Graveyard into the Deck. Then, if your opponent has a face-up Spellcaster Type monster on their field, you can shuffle up to 5 additional monsters from your opponent's Graveyard into the Deck.
+    Shuffle up to 5 monsters from your opponent's Graveyard into the Deck. Then, if your opponent has a face-up Spellcaster Type monster on their field, you can shuffle up to 5 monsters from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
@@ -47474,7 +47480,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if a face-up Field Spell Card is on the field, you can draw 1 additional card.
+    Draw 1 card. Then, if a face-up Field Spell Card is on the field, you can draw 1 card.
   de:
   es:
   fr:
@@ -50274,6 +50280,8 @@ materials:
     "마장 야메룰러" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
+series:
+- Three Rulers
 images:
 - index: 1
   image: YamiterasutheDivineRuler-RDS224-JP-ScR.png
@@ -51343,7 +51351,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you sent a Level 7 monster to the Graveyard to meet the requirement, you can draw 1 additional card.
+    Draw 1 card. Then, if you sent a Level 7 monster to the Graveyard to meet the requirement, you can draw 1 card.
   de:
   es:
   fr:
@@ -56816,7 +56824,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 1 card from your opponent's Graveyard into the Deck. Then, if you shuffled a Spell/Trap Card by this effect, you can shuffle 1 additional card from your opponent's Graveyard into the Deck.
+    Shuffle 1 card from your opponent's Graveyard into the Deck. Then, if you shuffled a Spell/Trap Card by this effect, you can shuffle 1 card from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
@@ -61554,7 +61562,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 3 monsters from your opponent's Graveyard into the Deck. Then, if you have 2 face-up non-Level 1 Spellcaster Type monsters on your field, you can shuffle 3 additional monsters from your opponent's Graveyard into the Deck.
+    Shuffle 3 monsters from your opponent's Graveyard into the Deck. Then, if you have 2 face-up non-Level 1 Spellcaster Type monsters on your field, you can shuffle 3 monsters from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
@@ -67921,6 +67929,8 @@ materials:
     "세븐즈로드 매지션" ＋ "다크니스 제로로그"
   zh-TW:
   zh-CN:
+series:
+- Darkness
 images:
 - index: 1
   image: MagicianofDarkSevens-RDMRP1-JP-UR.png
@@ -75784,7 +75794,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if your opponent has a face-up Level 7 monster on their field, you can draw 1 additional card.
+    Draw 1 card. Then, if your opponent has a face-up Level 7 monster on their field, you can draw 1 card.
   de:
   es:
   fr:
@@ -94381,7 +94391,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you sent a Spell Card to the Graveyard to meet the requirement and your LP are 1000 or lower, draw 1 additional card.
+    Draw 1 card. Then, if you sent a Spell Card to the Graveyard to meet the requirement and your LP are 1000 or lower, draw 1 card.
   de:
   es:
   fr:
@@ -100552,7 +100562,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have no monsters in your Graveyard, draw 1 additional card.
+    Draw 1 card. Then, if you have no monsters in your Graveyard, draw 1 card.
   de:
   es:
   fr:
@@ -105866,7 +105876,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have 4 or more monsters in your Graveyard, draw 1 additional card.
+    Draw 1 card. Then, if you have 4 or more monsters in your Graveyard, draw 1 card.
   de:
   es:
   fr:
@@ -111000,7 +111010,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you sent 2 Pyro, Aqua, and/or Thunder Type monsters to the Graveyard to meet the requirement, you can draw 1 additional card.
+    Draw 1 card. Then, if you sent 2 Pyro, Aqua, and/or Thunder Type monsters to the Graveyard to meet the requirement, you can draw 1 card.
   de:
   es:
   fr:
@@ -113551,7 +113561,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have a monster in Maximum Mode or a face-up Equip Spell Card on your field, you can draw 1 additional card.
+    Draw 1 card. Then, if you have a monster in Maximum Mode or a face-up Equip Spell Card on your field, you can draw 1 card.
   de:
   es:
   fr:
@@ -118618,7 +118628,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have 2 or more "Straynge Cat" and/or "Furtunate Cat" in your Graveyard, draw 1 additional card.
+    Draw 1 card. Then, if you have 2 or more "Straynge Cat" and/or "Furtunate Cat" in your Graveyard, draw 1 card.
   de:
   es:
   fr:
