--- a/data/rush/16169.yaml
+++ b/data/rush/16169.yaml
@@ -50,6 +50,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Beast Gear
 images:
 - index: 1
   image: ApocalypseLegendoftheWarrior-RDKP04-JP-C.png
