--- a/data/rush/16170.yaml
+++ b/data/rush/16170.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Beast Gear
 images:
 - index: 1
   image: ApocalypseTheUnstoppableBeastWarrior-RDKP05-JP-C.png
