--- a/data/rush/16703.yaml
+++ b/data/rush/16703.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Worker Warrior
 images:
 - index: 1
   image: NutrientZero-RDGRD2-JP-C.png
