--- a/data/rush/17312.yaml
+++ b/data/rush/17312.yaml
@@ -63,6 +63,8 @@ materials:
     "마장 세메룰러" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
+series:
+- Three Rulers
 images:
 - index: 1
   image: SemeterasutheDivineRuler-RDKP08-JP-UR.png
