--- a/data/rush/17329.yaml
+++ b/data/rush/17329.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Chameleon
 images:
 - index: 1
   image: FireWrath-RDKP08-JP-R.png
