--- a/data/rush/17688.yaml
+++ b/data/rush/17688.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, if your LP are 2000 or less, you can gain LP equal to [the number of Aqua Type monsters sent to the Graveyard by this effect] x 1000.
+    Send the top 3 cards of your Deck to the Graveyard. Then, if your LP are 2000 or lower, you can gain LP equal to [the number of Aqua Type monsters sent to the Graveyard by this effect] x 1000.
   de:
   es:
   fr:
