--- a/data/rush/15582.yaml
+++ b/data/rush/15582.yaml
@@ -50,6 +50,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: BurstBreathofDestruction-RDJB01-JP-NPR.png
