--- a/data/rush/16613.yaml
+++ b/data/rush/16613.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Sushi Fairy
 images:
 - index: 1
   image: RolledStickySave-RDMAX2-JP-C.png
