--- a/data/rush/16702.yaml
+++ b/data/rush/16702.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Worker Warrior
 images:
 - index: 1
   image: BusinessCardBarrage-RDKP06-JP-R.png
