--- a/data/rush/17328.yaml
+++ b/data/rush/17328.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Chameleon
 images:
 - index: 1
   image: ReleaseWrath-RDKP08-JP-SR.png
