--- a/rush.yaml
+++ b/rush.yaml
@@ -6267,6 +6267,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
+- Red-Eyes
 - Signature move
 images:
 - index: 1
@@ -10453,6 +10454,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: BurstBreathofDestruction-RDJB01-JP-NPR.png
@@ -26152,6 +26155,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Beast Gear
 images:
 - index: 1
   image: ApocalypseLegendoftheWarrior-RDKP04-JP-C.png
@@ -26212,6 +26217,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Beast Gear
 images:
 - index: 1
   image: ApocalypseTheUnstoppableBeastWarrior-RDKP05-JP-C.png
@@ -35873,6 +35880,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Sushi Fairy
 images:
 - index: 1
   image: InsideOutRoll-RDMAX2-JP-R.png
@@ -35996,6 +36005,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Sushi Fairy
 images:
 - index: 1
   image: RolledStickySave-RDMAX2-JP-C.png
@@ -39262,6 +39273,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Worker Warrior
 images:
 - index: 1
   image: BusinessCardBarrage-RDKP06-JP-R.png
@@ -39325,6 +39338,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Worker Warrior
 images:
 - index: 1
   image: NutrientZero-RDGRD2-JP-C.png
@@ -40341,6 +40356,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Worker Warrior
 images:
 - index: 1
   image: SalarySlash-RDSD02-JP-C.png
@@ -40412,6 +40429,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Worker Warrior
 images:
 - index: 1
   image: BattleDemotion-RDSD02-JP-C.png
@@ -54525,6 +54544,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Red-Eyes
 images:
 - index: 1
   image: BlackDragonsRoar-RDGRP1-JP-C.png
@@ -57618,6 +57639,8 @@ materials:
     "마장 세메룰러" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
+series:
+- Three Rulers
 images:
 - index: 1
   image: SemeterasutheDivineRuler-RDKP08-JP-UR.png
@@ -58817,6 +58840,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Chameleon
 images:
 - index: 1
   image: ReleaseWrath-RDKP08-JP-SR.png
@@ -58880,6 +58905,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Chameleon
 images:
 - index: 1
   image: FireWrath-RDKP08-JP-R.png
@@ -59399,6 +59426,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Chameleon
 images:
 - index: 1
   image: WrathofLight-RDKP08-JP-C.png
@@ -69233,7 +69262,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, if your LP are 2000 or less, you can gain LP equal to [the number of Aqua Type monsters sent to the Graveyard by this effect] x 1000.
+    Send the top 3 cards of your Deck to the Graveyard. Then, if your LP are 2000 or lower, you can gain LP equal to [the number of Aqua Type monsters sent to the Graveyard by this effect] x 1000.
   de:
   es:
   fr:
