--- a/rush.yaml
+++ b/rush.yaml
@@ -120109,6 +120109,66 @@ yugipedia_page_id: 1019007
 ---
 konami_id:
 name:
+  en: Kibatsu the Cutting Edge Deity
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>斬<rt>ざん</rt></ruby><ruby>神<rt>しん</rt></ruby>キバツ
+  ja_romaji: Zanshin Kibatsu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 2 cards of your Deck. You can send 1 excavated monster to the Graveyard. Shuffle the remaining cards into the Deck. If you sent "Kibatsu the Cutting Edge Deity" to the Graveyard by this effect, you can destroy 1 face-up card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 200
+images:
+- index: 1
+  image: KibatsutheCuttingEdgeDeity-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP052
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1019072
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
